<resources>
    <string name="app_name">DreamShop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_principal">Menú Principal</string>
    <string name="seleccione_uno">Seleccione Uno</string>
    <string name="admin">Admin</string>
    <string name="Iniciarsesion">Iniciar sesión</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="password">Contraseña</string>
    <string name="settings">Ajustes</string>
    <string name="user">Usuarios</string>
<<<<<<< Updated upstream
    <string name="unete">Unirse</string>
    <string name="user">Usuario</string>
=======
>>>>>>> Stashed changes
    <string name="unete">¡Únete!</string>
    <string name="sharebutt">Compartir</string>
    <string name="share">Si te gusta nuestra app comparte con tus amigos.</string>
    <string name="email">Correo</string>
    <string name="alunirse">Al unirse acepta los términos y la política de privacidad.</string>
    <string name="passwordconfirmation">Confirmar contraseña</string>
    <string name="yatienescuenta">¿Ya tienes una cuenta?</string>
    <string name="notienescuenta">"¿No tienes cuenta? "</string>
    <string name="registrarse">Registrarse</string>
    <string name="ofertas">Ofertas</string>
    <string name="featured">Destacados</string>
    <string name="nightmode">Cambiar tema</string>
    <string name="daymode">Modo dia</string>
    <string name="changelang">Cambiar idioma</string>
    <string name="contacto">Contacto</string>
    <string name="acercade">Acerca de nosotros</string>
    <string name="Configuracion">Configuración</string>
    <string name="Acercadenosotros">Somos un grupo de programadores con el objetivo de optimizar una metodología de comercio tal como lo es un restaurante, optimizar la forma de pedidos del cliente haciendo uso de la tecnologia de los smartphones hoy en dia.</string>
    <string name="registrateaqui">Regístrate aquí</string>
    <string name="enviaremail">Enviar email</string>
    <string name="Contactanos">Contáctanos</string>
    <string name="Estamosdispo">Estamos disponibles las 24 horas.</string>
    <string name="yatienescuentabutton">Ingresa aqui.</string>
    <string name="agregar_producto">Agregar producto</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="descripcion_del_producto">Descripción del producto</string>
    <string name="precio_de_compra">Precio de compra</string>
    <string name="precio_de_venta">Precio de venta</string>
    <string name="cantidad_existente">Cantidad existente</string>
    <string name="agregar">¡Agregar!</string>
    <string name="su_compra_fue_exitosa">¡Compra exitosa!</string>
    <string name="efectivo">Efectivo</string>
    <string name="paypal">Paypal</string>
    <string name="confirmar_compra">Confirmar compra</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Teléfono</string>
    <string name="finalizar_compra">Finalizar compra</string>
    <string name="perfil_usuario">Perfil de Usuario</string>
    <string name="ciudad">Ciudad</string>
    <string name="guardar">Guardar</string>
    <string name="precio_del_producto">Precio del producto</string>
    <string name="cantidad_producto">Cantidad</string>
    <string name="AddCarrito">Añadir al carrito</string>
    <string name="day_or_night">Día o Noche</string>
    <string name="registro_de_datos">Registro de datos</string>
    <string name="continuar">Continuar</string>
    <string name="fecha_y_hora">Fecha y Hora</string>
    <string name="ver_orden">Ver orden</string>
<<<<<<< Updated upstream
    <string name="cantidad_000">Cantidad: 000</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="bienvenidoadmin">¡Bienvenido Admin!</string>
    <string name="productos">Productos</string>
    <string name="correo_y_direccion">Correo y Dirección</string>
    <string name="carrito">Carrito</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="inicio">Inicio</string>
    <string name="inventario">Inventario</string>
    <string name="perfil">Perfil</string>
    <string name="orden">Orden</string>
    <string name="navigation_drawer_close">b</string>
    <string name="navigation_drawer_open">a</string>
=======
    <string name="cantidad">Cantidad</string>
    <string name="cambio_idioma">Cambio Idioma</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="correo_y_direccion">Correo y Dirección</string>
    <string name="Existencia">Existencias</string>
    <string name="costo">Costo: $</string>
    <string name="carrito">Carrito</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="configuraciones">Configuraciones</string>
    <string name="inicio">Inicio</string>
    <string name="inventario">Inventario</string>
    <string name="orden">Orden</string>
    <string name="dark_mode">Modo Oscuro</string>
    <string name="cambio_de_tema">Cambio de tema</string>
    <string name="datos_de_la_cuenta">Datos de la cuenta</string>
>>>>>>> Stashed changes

</resources>