<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmarordenActivity">

    <TextView
        android:id="@+id/texto23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmar_compra"
        android:textSize="24sp"
        android:textColor="@color/purple_500"
        android:layout_margin="20dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/confirma_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/texto23"
        android:layout_marginTop="25dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:hint="@string/nombre"
        android:background="@drawable/textos"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/confirma_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirma_nombre"
        android:layout_marginTop="25dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:inputType="textEmailAddress"
        android:hint="@string/correo"
        android:background="@drawable/textos"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/confirma_direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirma_correo"
        android:layout_marginTop="25dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:hint="@string/direccion"
        android:background="@drawable/textos"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/confirma_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirma_direccion"
        android:layout_marginTop="25dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:inputType="phone"
        android:hint="@string/telefono"
        android:background="@drawable/textos"
        android:padding="10dp"/>

    <Button
        android:id="@+id/confirma_boton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:text="@string/finalizar_compra"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:backgroundTint="@color/purple_500"
        android:padding="10dp"/>

</RelativeLayout>