<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="358dp"
        android:layout_height="712dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
<<<<<<< Updated upstream
            android:text="@string/bienvenidoadmin"
            android:textAlignment="center"
            android:textSize="30dp" />
=======
            android:text="@string/bienvenido"
            android:textAlignment="center"
            android:textSize="30sp" />
>>>>>>> Stashed changes

        <TextView
            android:id="@+id/textView31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Iniciarsesion"
            android:textAlignment="center"
            android:textSize="25sp"
<<<<<<< Updated upstream
            android:padding="20dp"/>
=======
            android:layout_marginTop="100dp"
            android:layout_marginBottom="40dp"/>
>>>>>>> Stashed changes


        <EditText
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:ems="10"
            android:textSize="20sp"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text=""
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/password"
            android:hint="@string/password"
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/iniciar"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/Iniciarsesion"
<<<<<<< Updated upstream
            android:textSize="15dp" />
=======
            android:textSize="16sp"
            android:layout_marginTop="25dp"/>
>>>>>>> Stashed changes

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notienescuenta"
            android:textAlignment="center"
            android:textSize="20sp"
<<<<<<< Updated upstream
            android:padding="5dp"/>
=======
            android:layout_marginTop="45dp" />
>>>>>>> Stashed changes

        <TextView
            android:id="@+id/registrateaqui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/registrateaqui"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
<<<<<<< Updated upstream
            android:textSize="20dp"
            android:padding="20dp"/>
=======
            android:textSize="20sp"
            android:layout_margin="15dp" />

>>>>>>> Stashed changes
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>