<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilActivity">

    <TextView
        android:id="@+id/encabezado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/perfil_usuario"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:background="@color/purple_500"
        android:textColor="@color/black"
        android:padding="15dp"
        android:textStyle="bold|italic"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/perfil_imagen"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/encabezado"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/welcome"
        app:civ_border_color="@color/black"
        app:civ_border_width="2dp"
        tools:visibility="invisible" />

    <EditText
        android:id="@+id/perfil_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/perfil_imagen"
        android:hint="@string/nombre"
        android:padding="10dp"
        android:background="@drawable/textos"
        android:inputType="text"
        android:layout_margin="20dp"/>

    <EditText
        android:id="@+id/perfil_direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/perfil_nombre"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/textos"
        android:hint="@string/direccion"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/perfil_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/perfil_direccion"
        android:hint="@string/telefono"
        android:padding="10dp"
        android:background="@drawable/textos"
        android:inputType="phone"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/perfil_ciudad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/perfil_telefono"
        android:hint="@string/ciudad"
        android:padding="10dp"
        android:background="@drawable/textos"
        android:inputType="text"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/perfil_boton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/perfil_ciudad"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/botones1"

        android:padding="10dp"
        android:text="@string/guardar"
        android:textSize="20dp" />

</RelativeLayout>