<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupAdminActivity">

    <TextView
        android:id="@+id/encabezado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:padding="15dp"
        android:text="@string/registrarse"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold|italic"
        android:textSize="20sp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/admsetup_imagen"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/encabezado"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/user"
        app:civ_border_color="@color/black"
        app:civ_border_width="2dp"
        tools:src="@drawable/iconoadmin" />

    <EditText
        android:id="@+id/admsetup_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/admsetup_imagen"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/textos"
        android:hint="@string/nombre"
        android:inputType="text"
        android:padding="10dp"
        android:textAlignment="center"
        android:layout_margin="15dp"/>

    <EditText
        android:id="@+id/admsetup_direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/admsetup_nombre"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/textos"
        android:hint="@string/direccion"
        android:inputType="text"
        android:padding="10dp"
        android:textAlignment="center"
        android:layout_margin="15dp"/>

    <EditText
        android:id="@+id/admsetup_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/admsetup_direccion"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/textos"
        android:hint="@string/telefono"
        android:inputType="phone"
        android:padding="10dp"
        android:textAlignment="center"
        android:layout_margin="15dp"/>

    <EditText
        android:id="@+id/admsetup_ciudad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/admsetup_telefono"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/textos"
        android:hint="@string/ciudad"
        android:inputType="text"
        android:padding="10dp"
        android:textAlignment="center"
        android:layout_margin="15dp"/>

    <Button
        android:id="@+id/admsetup_boton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/admsetup_ciudad"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/botones1"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:text="@string/continuar"
        android:textSize="20sp" />

</RelativeLayout>