<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="386dp"
        android:layout_height="668dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.492">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:textAlignment="center"
            android:textSize="30sp"
<<<<<<< Updated upstream
            android:paddingBottom="30sp"/>
=======
            android:layout_marginBottom="30dp"/>
>>>>>>> Stashed changes

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yatienescuenta"
            android:textAlignment="center"
<<<<<<< Updated upstream
            android:textSize="18sp" />
=======
            android:textSize="18sp"
            android:layout_marginTop="30dp"/>
>>>>>>> Stashed changes

        <TextView
            android:id="@+id/ingresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yatienescuentabutton"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:clickable="true"
<<<<<<< Updated upstream
            android:textSize="18sp" />
=======
            android:textSize="18sp"
            android:layout_marginTop="7dp"/>
>>>>>>> Stashed changes

        <TextView
            android:id="@+id/textView31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unete"
            android:textAlignment="center"
            android:textSize="25sp"
<<<<<<< Updated upstream
            android:paddingTop="30sp"
            android:paddingBottom="15sp"/>
=======
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"/>
>>>>>>> Stashed changes

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
<<<<<<< Updated upstream
            android:text=""/>

=======
            android:text=""
            android:layout_marginBottom="15dp"/>
>>>>>>> Stashed changes
        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
<<<<<<< Updated upstream
            tools:ignore="SpeakableTextPresentCheck" />
=======
            tools:ignore="SpeakableTextPresentCheck"
            android:layout_marginBottom="15dp" />
>>>>>>> Stashed changes

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passwordconfirmation"
<<<<<<< Updated upstream
            android:textSize="20dp" />
=======
            android:textSize="20sp" />
>>>>>>> Stashed changes

        <EditText
            android:id="@+id/passconfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
<<<<<<< Updated upstream
            tools:ignore="SpeakableTextPresentCheck"/>
=======
            tools:ignore="SpeakableTextPresentCheck" />
>>>>>>> Stashed changes

        <Button
            android:id="@+id/iniciar"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:onClick="registrarUsuario"
            android:text="@string/registrarse"
<<<<<<< Updated upstream
            android:layout_margin="20sp"/>

=======
            android:layout_marginTop="15dp"/>
>>>>>>> Stashed changes
        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alunirse"
            android:textAlignment="center"
            android:textSize="15sp"
<<<<<<< Updated upstream
            android:layout_marginTop="15sp"/>
=======
            android:layout_marginTop="45dp"/>
>>>>>>> Stashed changes

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>