<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupActivity">

    <TextView
        android:id="@+id/encabezado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registro_de_datos"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:background="@color/purple_500"
        android:textColor="@color/black"
        android:padding="15dp"
        android:textStyle="bold|italic"
        android:textSize="20sp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setup_imagen"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/encabezado"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:scaleType="centerInside"
<<<<<<< Updated upstream
        android:src="@drawable/welcome"
        android:visibility="visible"
=======
        android:src="@drawable/agregarimagen"
>>>>>>> Stashed changes
        app:civ_border_color="@color/black"
        app:civ_border_width="2dp" />

    <EditText
        android:id="@+id/setup_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setup_imagen"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/textos"
        android:hint="@string/nombre"
        android:inputType="text"
        android:padding="10dp"
        android:layout_margin="20dp"/>

    <EditText
        android:id="@+id/setup_direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setup_nombre"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/textos"
        android:hint="@string/direccion"
        android:inputType="text"
        android:padding="10dp"
        android:layout_margin="20dp"/>

    <EditText
        android:id="@+id/setup_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setup_direccion"
        android:hint="@string/telefono"
        android:padding="10dp"
        android:background="@drawable/textos"
        android:inputType="phone"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_margin="20dp"/>

    <EditText
        android:id="@+id/setup_ciudad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setup_telefono"
        android:hint="@string/ciudad"
        android:padding="10dp"
        android:background="@drawable/textos"
        android:inputType="text"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/setup_boton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setup_ciudad"
        android:layout_marginLeft="20dp"
<<<<<<< Updated upstream
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/botones1"
        android:padding="5dp"
=======
        android:layout_marginTop="80dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/botones1"
        android:padding="10dp"
>>>>>>> Stashed changes
        android:text="@string/continuar"
        android:textSize="20sp" />
</RelativeLayout>